<?xml version="1.0"?>
<package format="2">
  <name>masc_relay</name>
  <version>0.0.1</version>
  <description>relay for point-cloud messages from the DT100 Multi-beam sonar</description>

  <author email="adthoms@uwaterloo.ca">Alexander Thoms</author>
  <maintainer email="adthoms@uwaterloo.ca">Alexander Thoms</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <build_depend>pcl-pcl-1.8.1</build_depend>
  <exec_depend>pcl-pcl-1.8.1</exec_depend>

  <export>
  </export>

</package>
