<?xml version="1.0"?>
<package format="2">
  <name>dt100_driver</name>
  <version>0.0.1</version>
  <description>
      ROS driver for Imagenex DT100 multibeam profiling sensor.
  </description>
  <maintainer email="adthoms@uwaterloo.ca">Alexander Thoms</maintainer>
  <maintainer email="gearle@uwaterloo.ca">Gabriel Earle</maintainer>
  <license>BSD</license>
  <author email="adthoms@uwaterloo.ca">Alexander Thoms</author>
  <author email="gearle@uwaterloo.ca">Gabriel Earle</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <build_depend>pcl-pcl-1.8.1</build_depend>
  <exec_depend>pcl-pcl-1.8.1</exec_depend>
</package>
